--- a/NotifiqueMe.Server/MainWindow.xaml
+++ b/NotifiqueMe.Server/MainWindow.xaml
@@ -9,7 +9,7 @@
     <Grid>
         <Button x:Name="startServerButton" Content="Start" Margin="444,0,115,10" Click="startServerButton_Click" VerticalAlignment="Bottom" Height="29"/>
         <Button x:Name="closeServerButton" Content="End" Margin="549,0,10,10" IsEnabled="False" Click="closeServerButton_Click" VerticalAlignment="Bottom" Height="29"/>
-        <TextBox x:Name="logWindow" TextWrapping="Wrap" Text="" Margin="10,10,220,10" IsReadOnly="True" Focusable="False"/>
+        <TextBox x:Name="logWindow" TextWrapping="Wrap" Text="" Margin="10,10,220,10" IsReadOnly="True" Focusable="False" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Auto"/>
         <GroupBox x:Name="groupBox" Header="Server Information" Margin="444,10,10,78">
             <Grid Margin="0,0,0,0">
                 <Label x:Name="currentConnectionsLabel" Content="Open Connections:" Margin="0,10,74,89"/>
