--- a/NotifiqueMe.Server/MainWindow.xaml
+++ b/NotifiqueMe.Server/MainWindow.xaml
@@ -7,16 +7,16 @@
         mc:Ignorable="d"
         Title="NotifiqueMe Server" Height="350" Width="667" Closing="Window_Closing">
     <Grid>
-        <Button x:Name="startServerButton" Content="Start" Margin="444,0,115,10" Click="startServerButton_Click" VerticalAlignment="Bottom" Height="29"/>
-        <Button x:Name="closeServerButton" Content="End" Margin="549,0,10,10" IsEnabled="False" Click="closeServerButton_Click" VerticalAlignment="Bottom" Height="29"/>
+        <Button x:Name="startServerButton" Content="Start" Margin="0,0,115,10" Click="startServerButton_Click" VerticalAlignment="Bottom" Height="29" HorizontalAlignment="Right" Width="100"/>
+        <Button x:Name="closeServerButton" Content="End" Margin="0,0,10,10" IsEnabled="False" Click="closeServerButton_Click" VerticalAlignment="Bottom" Height="29" HorizontalAlignment="Right" Width="100"/>
         <TextBox x:Name="logWindow" TextWrapping="Wrap" Text="" Margin="10,10,220,10" IsReadOnly="True" Focusable="False" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Auto"/>
-        <GroupBox x:Name="groupBox" Header="Server Information" Margin="444,10,10,78">
+        <GroupBox x:Name="groupBox" Header="Server Information" Margin="0,10,10,78" HorizontalAlignment="Right" Width="205">
             <Grid Margin="0,0,0,0">
-                <Label x:Name="currentConnectionsLabel" Content="Open Connections:" Margin="0,10,74,89"/>
-                <Label x:Name="currentConnectionsDisplay" Content="0 /0" Margin="121,10,0,89" HorizontalContentAlignment="Right"/>
+                <Label x:Name="currentConnectionsLabel" Content="Open Connections:" Margin="0,10,74,0" Height="26" VerticalAlignment="Top"/>
+                <Label x:Name="currentConnectionsDisplay" Content="0 /0" Margin="121,10,0,0" HorizontalContentAlignment="Right" Height="26" VerticalAlignment="Top"/>
             </Grid>
         </GroupBox>
-        <Button x:Name="button" Content="Settings" Margin="444,0,10,44" Height="29" VerticalAlignment="Bottom"/>
+        <Button x:Name="SettingsButton" Content="Settings" Margin="0,0,10,44" Height="29" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="205" Click="SettingsButton_Click"/>
 
     </Grid>
 </Window>
